dvc data validation and transformation added

--- a/research/01_data_ingestion.ipynb
+++ b/research/01_data_ingestion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Repositories\\\\ml-churn'"
+       "'d:\\\\Repositories\\\\ml-churn\\\\research'"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "'d:\\\\Repositories\\\\ml-churn'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,44 +146,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-12-12 10:43:15,716: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-12-12 10:43:15,722: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-12-12 10:43:15,723: INFO: common: created directory at: artifacts]\n",
-      "[2023-12-12 10:43:15,724: INFO: common: created directory at: artifacts/data_ingestion]\n",
-      "[2023-12-12 10:43:16,135: INFO: 2636294053: artifacts/data_ingestion/main_data.csv download! with following info: \n",
-      "Connection: close\n",
-      "Content-Length: 977501\n",
-      "Cache-Control: max-age=300\n",
-      "Content-Security-Policy: default-src 'none'; style-src 'unsafe-inline'; sandbox\n",
-      "Content-Type: text/plain; charset=utf-8\n",
-      "ETag: \"7621242d3baa8c7124df0dee37b49fe591011b869ceb7b18ed42d800ea52f6d7\"\n",
-      "Strict-Transport-Security: max-age=31536000\n",
-      "X-Content-Type-Options: nosniff\n",
-      "X-Frame-Options: deny\n",
-      "X-XSS-Protection: 1; mode=block\n",
-      "X-GitHub-Request-Id: 2334:38AF82:120275:166BDB:65786372\n",
-      "Accept-Ranges: bytes\n",
-      "Date: Tue, 12 Dec 2023 13:43:15 GMT\n",
-      "Via: 1.1 varnish\n",
-      "X-Served-By: cache-scl2220025-SCL\n",
-      "X-Cache: MISS\n",
-      "X-Cache-Hits: 0\n",
-      "X-Timer: S1702388595.278019,VS0,VE244\n",
-      "Vary: Authorization,Accept-Encoding,Origin\n",
-      "Access-Control-Allow-Origin: *\n",
-      "Cross-Origin-Resource-Policy: cross-origin\n",
-      "X-Fastly-Request-ID: 6a1a5cb907efd76b7b234f88940de90c969767c2\n",
-      "Expires: Tue, 12 Dec 2023 13:48:15 GMT\n",
-      "Source-Age: 0\n",
-      "\n",
-      "]\n"
+      "[2023-12-15 10:52:02,124: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-12-15 10:52:02,130: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-12-15 10:52:02,131: INFO: common: created directory at: artifacts]\n",
+      "[2023-12-15 10:52:02,132: INFO: common: created directory at: artifacts/data_ingestion]\n",
+      "[2023-12-15 10:52:02,133: INFO: 2636294053: File already exist of size: ~ 962 KB]\n"
      ]
     }
    ],
