--- a/research/EDA_churn_analysis.ipynb
+++ b/research/EDA_churn_analysis.ipynb
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,11 +80,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_df = pd.read_csv(\"D:\\Repositories\\ml-churn/artifacts\\data_ingestion\\main_data_uncorrected.csv\")"
+    "data_df = pd.read_csv(\"D:\\Repositories\\ml-churn/artifacts\\data_ingestion\\main_data.csv\")"
    ]
   },
   {
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
        "      <th>0</th>\n",
        "      <td>7590-VHVEG</td>\n",
        "      <td>Female</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "      <td>1</td>\n",
@@ -172,7 +172,7 @@
        "      <th>1</th>\n",
        "      <td>5575-GNVDE</td>\n",
        "      <td>Male</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>34</td>\n",
@@ -189,14 +189,14 @@
        "      <td>No</td>\n",
        "      <td>Mailed check</td>\n",
        "      <td>56.95</td>\n",
-       "      <td>1889.5</td>\n",
+       "      <td>1889.50</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3668-QPYBK</td>\n",
        "      <td>Male</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>2</td>\n",
@@ -220,7 +220,7 @@
        "      <th>3</th>\n",
        "      <td>7795-CFOCW</td>\n",
        "      <td>Male</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>45</td>\n",
@@ -244,7 +244,7 @@
        "      <th>4</th>\n",
        "      <td>9237-HQITU</td>\n",
        "      <td>Female</td>\n",
-       "      <td>0</td>\n",
+       "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "      <td>2</td>\n",
@@ -270,12 +270,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   customerID  gender  SeniorCitizen Partner Dependents  tenure PhoneService  \\\n",
-       "0  7590-VHVEG  Female              0     Yes         No       1           No   \n",
-       "1  5575-GNVDE    Male              0      No         No      34          Yes   \n",
-       "2  3668-QPYBK    Male              0      No         No       2          Yes   \n",
-       "3  7795-CFOCW    Male              0      No         No      45           No   \n",
-       "4  9237-HQITU  Female              0      No         No       2          Yes   \n",
+       "   customerID  gender SeniorCitizen Partner Dependents  tenure PhoneService  \\\n",
+       "0  7590-VHVEG  Female            No     Yes         No       1           No   \n",
+       "1  5575-GNVDE    Male            No      No         No      34          Yes   \n",
+       "2  3668-QPYBK    Male            No      No         No       2          Yes   \n",
+       "3  7795-CFOCW    Male            No      No         No      45           No   \n",
+       "4  9237-HQITU  Female            No      No         No       2          Yes   \n",
        "\n",
        "      MultipleLines InternetService OnlineSecurity  ... DeviceProtection  \\\n",
        "0  No phone service             DSL             No  ...               No   \n",
@@ -291,17 +291,17 @@
        "3         Yes          No              No        One year               No   \n",
        "4          No          No              No  Month-to-month              Yes   \n",
        "\n",
-       "               PaymentMethod MonthlyCharges  TotalCharges Churn  \n",
-       "0           Electronic check          29.85         29.85    No  \n",
-       "1               Mailed check          56.95        1889.5    No  \n",
-       "2               Mailed check          53.85        108.15   Yes  \n",
-       "3  Bank transfer (automatic)          42.30       1840.75    No  \n",
-       "4           Electronic check          70.70        151.65   Yes  \n",
+       "               PaymentMethod MonthlyCharges  TotalCharges  Churn  \n",
+       "0           Electronic check          29.85         29.85     No  \n",
+       "1               Mailed check          56.95       1889.50     No  \n",
+       "2               Mailed check          53.85        108.15    Yes  \n",
+       "3  Bank transfer (automatic)          42.30       1840.75     No  \n",
+       "4           Electronic check          70.70        151.65    Yes  \n",
        "\n",
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +405,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +432,7 @@
        "0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -458,32 +458,32 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 7043 entries, 0 to 7042\n",
+      "RangeIndex: 7032 entries, 0 to 7031\n",
       "Data columns (total 21 columns):\n",
       " #   Column            Non-Null Count  Dtype  \n",
       "---  ------            --------------  -----  \n",
-      " 0   customerID        7043 non-null   object \n",
-      " 1   gender            7043 non-null   object \n",
-      " 2   SeniorCitizen     7043 non-null   int64  \n",
-      " 3   Partner           7043 non-null   object \n",
-      " 4   Dependents        7043 non-null   object \n",
-      " 5   tenure            7043 non-null   int64  \n",
-      " 6   PhoneService      7043 non-null   object \n",
-      " 7   MultipleLines     7043 non-null   object \n",
-      " 8   InternetService   7043 non-null   object \n",
-      " 9   OnlineSecurity    7043 non-null   object \n",
-      " 10  OnlineBackup      7043 non-null   object \n",
-      " 11  DeviceProtection  7043 non-null   object \n",
-      " 12  TechSupport       7043 non-null   object \n",
-      " 13  StreamingTV       7043 non-null   object \n",
-      " 14  StreamingMovies   7043 non-null   object \n",
-      " 15  Contract          7043 non-null   object \n",
-      " 16  PaperlessBilling  7043 non-null   object \n",
-      " 17  PaymentMethod     7043 non-null   object \n",
-      " 18  MonthlyCharges    7043 non-null   float64\n",
-      " 19  TotalCharges      7043 non-null   object \n",
-      " 20  Churn             7043 non-null   object \n",
-      "dtypes: float64(1), int64(2), object(18)\n",
+      " 0   customerID        7032 non-null   object \n",
+      " 1   gender            7032 non-null   object \n",
+      " 2   SeniorCitizen     7032 non-null   object \n",
+      " 3   Partner           7032 non-null   object \n",
+      " 4   Dependents        7032 non-null   object \n",
+      " 5   tenure            7032 non-null   int64  \n",
+      " 6   PhoneService      7032 non-null   object \n",
+      " 7   MultipleLines     7032 non-null   object \n",
+      " 8   InternetService   7032 non-null   object \n",
+      " 9   OnlineSecurity    7032 non-null   object \n",
+      " 10  OnlineBackup      7032 non-null   object \n",
+      " 11  DeviceProtection  7032 non-null   object \n",
+      " 12  TechSupport       7032 non-null   object \n",
+      " 13  StreamingTV       7032 non-null   object \n",
+      " 14  StreamingMovies   7032 non-null   object \n",
+      " 15  Contract          7032 non-null   object \n",
+      " 16  PaperlessBilling  7032 non-null   object \n",
+      " 17  PaymentMethod     7032 non-null   object \n",
+      " 18  MonthlyCharges    7032 non-null   float64\n",
+      " 19  TotalCharges      7032 non-null   float64\n",
+      " 20  Churn             7032 non-null   object \n",
+      "dtypes: float64(2), int64(1), object(18)\n",
       "memory usage: 1.1+ MB\n"
      ]
     }
@@ -496,78 +496,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Change data types of \"SeniorCitizen\" from int64 to object, and \"TotalCharges\" from object to float64"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mapping_dict = {1: \"Yes\" , 0: \"No\"}\n",
-    "data_df[\"SeniorCitizen\"] = data_df[\"SeniorCitizen\"].map(mapping_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_df[\"TotalCharges\"] = pd.to_numeric(data_df[\"TotalCharges\"], errors='coerce')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Check again if some values of Total Charges were null or NaN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "11"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data_df.TotalCharges.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "Droping Na from data_df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_df.dropna(inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data_df.to_csv(\"Telco_churn.csv\", index=False)"
    ]
   },
   {
@@ -579,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1193,9 +1131,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.cluster import KMeans\n",
     "from sklearn.mixture import GaussianMixture\n",
@@ -1225,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1246,7 +1192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1269,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,7 +1325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1388,11 +1334,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_new = data_df.drop(\"customerID\" ,axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_new.dropna(inplace=True)"
    ]
   },
   {
@@ -1404,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1414,30 +1369,30 @@
       "Init: initializing centroids\n",
       "Init: initializing clusters\n",
       "Starting iterations...\n",
-      "Run: 1, iteration: 1/100, moves: 1735, ncost: 22273.380357423146\n",
-      "Run: 1, iteration: 2/100, moves: 390, ncost: 22149.960970692544\n",
-      "Run: 1, iteration: 3/100, moves: 291, ncost: 22094.863332914818\n",
-      "Run: 1, iteration: 4/100, moves: 92, ncost: 22093.247882608794\n",
-      "Run: 1, iteration: 5/100, moves: 27, ncost: 22092.7457607406\n",
-      "Run: 1, iteration: 6/100, moves: 9, ncost: 22092.699093472518\n",
-      "Run: 1, iteration: 7/100, moves: 0, ncost: 22092.699093472518\n"
+      "Run: 1, iteration: 1/100, moves: 3272, ncost: 24083.739712558683\n",
+      "Run: 1, iteration: 2/100, moves: 355, ncost: 23848.65964722781\n",
+      "Run: 1, iteration: 3/100, moves: 114, ncost: 23827.299918612334\n",
+      "Run: 1, iteration: 4/100, moves: 47, ncost: 23826.167732537328\n",
+      "Run: 1, iteration: 5/100, moves: 3, ncost: 23826.15487184442\n",
+      "Run: 1, iteration: 6/100, moves: 0, ncost: 23826.15487184442\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([0, 0, 0, ..., 0, 0, 2], dtype=uint16)"
+       "array([0, 0, 0, ..., 0, 0, 1], dtype=uint16)"
       ]
      },
-     "execution_count": 325,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from kmodes.kprototypes import KPrototypes\n",
-    "kP = KPrototypes(n_clusters=4, init='Huang', n_init=1, verbose=True)\n",
-    "kP.fit_predict(data_new.drop(\"Churn\", axis=1), categorical=[0,1,2,3,5,6,7,8,9,10,11,12,13,14,15,16])\n"
+    "kP = KPrototypes(n_clusters=3, init='Huang', n_init=1, verbose=True)\n",
+    "kP.fit(data_new.drop(\"Churn\", axis=1), categorical= [0,1,2,3,5,6,7,8,9,10,11,12,13,14,15,16])\n",
+    "kP.predict(data_new.drop(\"Churn\", axis=1), categorical= [0,1,2,3,5,6,7,8,9,10,11,12,13,14,15,16])"
    ]
   },
   {
@@ -1641,14 +1596,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the Figure it can be observed that <i>K-means<i> and <i>KPrototypes<i> gives a value of 4 as a good match, <i>GMM<i> shows a value of 4."
+    "From the Figure it can be observed that <i>K-means<i> and <i>KPrototypes<i> gives a value of 3 as a good match, <i>GMM<i> shows a value of 4."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this case, considering that <i>KPrototypes<i> is a more adequate method for clustering a mix of categorical and numerical data we choose 4 as the number of clusters."
+    "In this case, considering that <i>KPrototypes<i> is a more adequate method for clustering a mix of categorical and numerical data we choose 3 as the number of clusters."
    ]
   },
   {
