--- a/research/05_model_training.ipynb
+++ b/research/05_model_training.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,15 +51,14 @@
     "class ModelTrainerConfig:\n",
     "    root_dir: Path\n",
     "    train_data_path: Path\n",
-    "    test_data_path: Path\n",
     "    model_name_1: str\n",
     "    params: dict\n",
-    "    target_column_1: float\n"
+    "    target_column: float\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,14 +93,109 @@
     "        model_trainer_config = ModelTrainerConfig(\n",
     "            root_dir = config.root_dir,\n",
     "            train_data_path = config.train_data_path,\n",
-    "            test_data_path  = config.test_data_path,\n",
     "            model_name_1 = config.model_name_1,\n",
     "            params = params,\n",
-    "            target_column_1= schema.target_1\n",
+    "            target_column= schema.target_1\n",
     "            )\n",
     "        return model_trainer_config\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os \n",
+    "from Churn_analysis import logger\n",
+    "from xgboost import XGBClassifier\n",
+    "import joblib\n",
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ModelTrainer():\n",
+    "    def __init__(self, config: ModelTrainerConfig):\n",
+    "        self.config = config\n",
+    "\n",
+    "    def get_model_trainer_object(self):\n",
+    "\n",
+    "        \"\"\"\n",
+    "        This function is responsible for training the model\n",
+    "        \"\"\"\n",
+    "        train_data_df     = pd.read_csv(self.config.train_data_path)\n",
+    "        \n",
+    "        y_data_train_1 = train_data_df[self.config.target_column]\n",
+    "        X_data_train_1 = train_data_df.drop(columns= self.config.target_column)\n",
+    "\n",
+    "        params_xgb  =  self.config.params\n",
+    "    \n",
+    "        xgb_churn = XGBClassifier(**params_xgb,objective='binary:logistic', random_state=42)\n",
+    "        xgb_churn.fit(X_data_train_1,y_data_train_1)\n",
+    "\n",
+    "\n",
+    "        joblib.dump(xgb_churn, os.path.join(self.config.root_dir,self.config.model_name_1))\n",
+    "\n",
+    "        logger.info(f\"Model_1 is saved in {os.path.join(self.config.root_dir,self.config.model_name_1)}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2023-12-15 16:02:18,372: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-12-15 16:02:18,374: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-12-15 16:02:18,377: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2023-12-15 16:02:18,378: INFO: common: created directory at: artifacts]\n",
+      "[2023-12-15 16:02:18,379: INFO: common: created directory at: artifacts/model_trainer]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[16:02:18] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0750514818a16474a-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:742: \n",
+      "Parameters: { \"reg_lamba\" } are not used.\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2023-12-15 16:02:18,679: INFO: 3878663862: Model_1 is saved in artifacts/model_trainer\\churn_predictive_model.joblib]\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    config = ConfigurationManager()\n",
+    "    model_trainer_config = config.get_model_trainer_config()\n",
+    "    model_trainer = ModelTrainer(config = model_trainer_config)\n",
+    "    model_trainer.get_model_trainer_object()\n",
+    "\n",
+    "except Exception as e:\n",
+    "    raise e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
