dvc model evaluation added

--- a/research/06_model_evaluation.ipynb
+++ b/research/06_model_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'d:\\\\Repositories\\\\ml-churn'"
+       "'d:\\\\Repositories\\\\ml-churn\\\\research'"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,13 +136,12 @@
     "\n",
     "import mlflow\n",
     "import mlflow.xgboost\n",
-    "from  urllib.parse import urlparse\n",
-    "import numpy as np\n"
+    "from  urllib.parse import urlparse\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,6 +160,13 @@
     "\n",
     "        conf_matrix = confusion_matrix(y_test, model.predict(X_test))\n",
     "\n",
+    "        y_proba = model.predict_proba(X_test)[:, 1]\n",
+    "        # Compute ROC curve and AUC\n",
+    "        fpr, tpr, thresholds = roc_curve(y_test, y_proba)\n",
+    "        roc_auc = auc(fpr, tpr)\n",
+    "\n",
+    "\n",
+    "\n",
     "        mlflow.set_registry_uri(self.config.mlflow_uri)\n",
     "        tracking_url_type_store = urlparse(mlflow.get_tracking_uri()).scheme\n",
     "\n",
@@ -175,7 +181,8 @@
     "\n",
     "            for key in scores.keys():\n",
     "                mlflow.log_metric(key,scores[key])\n",
-    "\n",
+    "                print(key,scores[key])\n",
+    "            mlflow.log_metric(\"ROC_AUC\",roc_auc)\n",
     "\n",
     "            if tracking_url_type_store != \"file\":\n",
     "                mlflow.xgboost.log_model(model, \"Churn_model\", registered_model_name=\"Churn_model\")\n",
@@ -186,32 +193,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2023-12-15 17:06:25,020: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
-      "[2023-12-15 17:06:25,023: INFO: common: yaml file: params.yaml loaded successfully]\n",
-      "[2023-12-15 17:06:25,026: INFO: common: yaml file: schema.yaml loaded successfully]\n",
-      "[2023-12-15 17:06:25,027: INFO: common: created directory at: artifacts]\n",
-      "[2023-12-15 17:06:25,028: INFO: common: created directory at: artifacts/model_evaluation]\n"
+      "[2023-12-15 17:46:32,245: INFO: common: yaml file: config\\config.yaml loaded successfully]\n",
+      "[2023-12-15 17:46:32,248: INFO: common: yaml file: params.yaml loaded successfully]\n",
+      "[2023-12-15 17:46:32,251: INFO: common: yaml file: schema.yaml loaded successfully]\n",
+      "[2023-12-15 17:46:32,252: INFO: common: created directory at: artifacts]\n",
+      "[2023-12-15 17:46:32,253: INFO: common: created directory at: artifacts/model_evaluation]\n",
+      "[2023-12-15 17:46:32,733: INFO: common: json file saved at: artifacts\\model_evaluation\\scores.json]\n",
+      "Accuracy 0.7924170616113744\n",
+      "Precision 0.600326264274062\n",
+      "Recall 0.6559714795008913\n",
+      "Specificity 0.841833440929632\n",
+      "F1 Score 0.6269165247018741\n",
+      "FPR 0.15816655907036797\n",
+      "FDR 0.399673735725938\n",
+      "FNR 0.34402852049910876\n",
+      "MCC 0.48442348202857055\n"
      ]
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[107], line 8\u001b[0m\n\u001b[0;32m      5\u001b[0m     model_evaluation\u001b[38;5;241m.\u001b[39mget_model_evaluation_object()\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m----> 8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[107], line 5\u001b[0m\n\u001b[0;32m      3\u001b[0m     model_evaluation_config \u001b[38;5;241m=\u001b[39m config\u001b[38;5;241m.\u001b[39mget_model_evaluation_config()\n\u001b[0;32m      4\u001b[0m     model_evaluation \u001b[38;5;241m=\u001b[39m ModelEvaluation(config \u001b[38;5;241m=\u001b[39m model_evaluation_config)\n\u001b[1;32m----> 5\u001b[0m     \u001b[43mmodel_evaluation\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_model_evaluation_object\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m e\n",
-      "Cell \u001b[1;32mIn[106], line 23\u001b[0m, in \u001b[0;36mModelEvaluation.get_model_evaluation_object\u001b[1;34m(self)\u001b[0m\n\u001b[0;32m     17\u001b[0m tracking_url_type_store \u001b[38;5;241m=\u001b[39m urlparse(mlflow\u001b[38;5;241m.\u001b[39mget_tracking_uri())\u001b[38;5;241m.\u001b[39mscheme\n\u001b[0;32m     21\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m mlflow\u001b[38;5;241m.\u001b[39mstart_run():\n\u001b[1;32m---> 23\u001b[0m     scores \u001b[38;5;241m=\u001b[39m \u001b[43mcalculate_metrics\u001b[49m\u001b[43m(\u001b[49m\u001b[43mconf_matrix\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     24\u001b[0m     save_json(path\u001b[38;5;241m=\u001b[39m Path(os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mroot_dir,\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mscores.json\u001b[39m\u001b[38;5;124m\"\u001b[39m)), data \u001b[38;5;241m=\u001b[39m scores)\n\u001b[0;32m     26\u001b[0m     mlflow\u001b[38;5;241m.\u001b[39mlog_params(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mconfig\u001b[38;5;241m.\u001b[39mall_params)\n",
-      "File \u001b[1;32md:\\Repositories\\ml-churn\\src\\Churn_analysis\\utils\\common.py:177\u001b[0m, in \u001b[0;36mcalculate_metrics\u001b[1;34m(conf_matrix)\u001b[0m\n\u001b[0;32m    175\u001b[0m fdr \u001b[38;5;241m=\u001b[39m FP \u001b[38;5;241m/\u001b[39m (TP \u001b[38;5;241m+\u001b[39m FP)\n\u001b[0;32m    176\u001b[0m fnr \u001b[38;5;241m=\u001b[39m FN \u001b[38;5;241m/\u001b[39m (TP \u001b[38;5;241m+\u001b[39m FN)\n\u001b[1;32m--> 177\u001b[0m mcc \u001b[38;5;241m=\u001b[39m (TP \u001b[38;5;241m*\u001b[39m TN \u001b[38;5;241m-\u001b[39m FP \u001b[38;5;241m*\u001b[39m FN) \u001b[38;5;241m/\u001b[39m \u001b[43mnp\u001b[49m\u001b[38;5;241m.\u001b[39msqrt((TP \u001b[38;5;241m+\u001b[39m FP) \u001b[38;5;241m*\u001b[39m (TP \u001b[38;5;241m+\u001b[39m FN) \u001b[38;5;241m*\u001b[39m (TN \u001b[38;5;241m+\u001b[39m FP) \u001b[38;5;241m*\u001b[39m (TN \u001b[38;5;241m+\u001b[39m FN))\n\u001b[0;32m    179\u001b[0m \u001b[38;5;66;03m# Create a dictionary to store the metrics\u001b[39;00m\n\u001b[0;32m    180\u001b[0m metrics_dict \u001b[38;5;241m=\u001b[39m {\n\u001b[0;32m    181\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mAccuracy\u001b[39m\u001b[38;5;124m'\u001b[39m: accuracy,\n\u001b[0;32m    182\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPrecision\u001b[39m\u001b[38;5;124m'\u001b[39m: precision,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    189\u001b[0m     \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mMatthews Correlation Coefficient (MCC)\u001b[39m\u001b[38;5;124m'\u001b[39m: mcc,\n\u001b[0;32m    190\u001b[0m }\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'np' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "d:\\Repositories\\ml-churn\\venv\\Lib\\site-packages\\xgboost\\core.py:160: UserWarning: [17:46:35] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0750514818a16474a-1\\xgboost\\xgboost-ci-windows\\src\\c_api\\c_api.cc:1240: Saving into deprecated binary model format, please consider using `json` or `ubj`. Model format will default to JSON in XGBoost 2.2 if not specified.\n",
+      "  warnings.warn(smsg, UserWarning)\n",
+      "Registered model 'Churn_model' already exists. Creating a new version of this model...\n",
+      "2023/12/15 17:46:43 INFO mlflow.tracking._model_registry.client: Waiting up to 300 seconds for model version to finish creation.                     Model name: Churn_model, version 4\n",
+      "Created version '4' of model 'Churn_model'.\n"
      ]
     }
    ],
@@ -225,6 +239,13 @@
     "except Exception as e:\n",
     "    raise e"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
