--- a/research/Model_churn_analysis.ipynb
+++ b/research/Model_churn_analysis.ipynb
@@ -205,6 +205,91 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method DataFrame.value_counts of       customerID  gender SeniorCitizen Partner Dependents  tenure  \\\n",
+       "0     7590-VHVEG  Female            No     Yes         No       1   \n",
+       "1     5575-GNVDE    Male            No      No         No      34   \n",
+       "2     3668-QPYBK    Male            No      No         No       2   \n",
+       "3     7795-CFOCW    Male            No      No         No      45   \n",
+       "4     9237-HQITU  Female            No      No         No       2   \n",
+       "...          ...     ...           ...     ...        ...     ...   \n",
+       "7027  6840-RESVB    Male            No     Yes        Yes      24   \n",
+       "7028  2234-XADUH  Female            No     Yes        Yes      72   \n",
+       "7029  4801-JZAZL  Female            No     Yes        Yes      11   \n",
+       "7030  8361-LTMKD    Male           Yes     Yes         No       4   \n",
+       "7031  3186-AJIEK    Male            No      No         No      66   \n",
+       "\n",
+       "     PhoneService     MultipleLines InternetService OnlineSecurity  ...  \\\n",
+       "0              No  No phone service             DSL             No  ...   \n",
+       "1             Yes                No             DSL            Yes  ...   \n",
+       "2             Yes                No             DSL            Yes  ...   \n",
+       "3              No  No phone service             DSL            Yes  ...   \n",
+       "4             Yes                No     Fiber optic             No  ...   \n",
+       "...           ...               ...             ...            ...  ...   \n",
+       "7027          Yes               Yes             DSL            Yes  ...   \n",
+       "7028          Yes               Yes     Fiber optic             No  ...   \n",
+       "7029           No  No phone service             DSL            Yes  ...   \n",
+       "7030          Yes               Yes     Fiber optic             No  ...   \n",
+       "7031          Yes                No     Fiber optic            Yes  ...   \n",
+       "\n",
+       "     DeviceProtection TechSupport StreamingTV StreamingMovies        Contract  \\\n",
+       "0                  No          No          No              No  Month-to-month   \n",
+       "1                 Yes          No          No              No        One year   \n",
+       "2                  No          No          No              No  Month-to-month   \n",
+       "3                 Yes         Yes          No              No        One year   \n",
+       "4                  No          No          No              No  Month-to-month   \n",
+       "...               ...         ...         ...             ...             ...   \n",
+       "7027              Yes         Yes         Yes             Yes        One year   \n",
+       "7028              Yes          No         Yes             Yes        One year   \n",
+       "7029               No          No          No              No  Month-to-month   \n",
+       "7030               No          No          No              No  Month-to-month   \n",
+       "7031              Yes         Yes         Yes             Yes        Two year   \n",
+       "\n",
+       "     PaperlessBilling              PaymentMethod MonthlyCharges  TotalCharges  \\\n",
+       "0                 Yes           Electronic check          29.85         29.85   \n",
+       "1                  No               Mailed check          56.95       1889.50   \n",
+       "2                 Yes               Mailed check          53.85        108.15   \n",
+       "3                  No  Bank transfer (automatic)          42.30       1840.75   \n",
+       "4                 Yes           Electronic check          70.70        151.65   \n",
+       "...               ...                        ...            ...           ...   \n",
+       "7027              Yes               Mailed check          84.80       1990.50   \n",
+       "7028              Yes    Credit card (automatic)         103.20       7362.90   \n",
+       "7029              Yes           Electronic check          29.60        346.45   \n",
+       "7030              Yes               Mailed check          74.40        306.60   \n",
+       "7031              Yes  Bank transfer (automatic)         105.65       6844.50   \n",
+       "\n",
+       "      Churn  \n",
+       "0        No  \n",
+       "1        No  \n",
+       "2       Yes  \n",
+       "3        No  \n",
+       "4       Yes  \n",
+       "...     ...  \n",
+       "7027     No  \n",
+       "7028     No  \n",
+       "7029     No  \n",
+       "7030    Yes  \n",
+       "7031     No  \n",
+       "\n",
+       "[7032 rows x 21 columns]>"
+      ]
+     },
+     "execution_count": 167,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_df.value_counts"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 120,
    "metadata": {},
    "outputs": [],
