--- a/research/03_data_transformation.ipynb
+++ b/research/03_data_transformation.ipynb
@@ -156,8 +156,9 @@
     "\n",
     "        Ordinal_variables = [\"gender\", \"SeniorCitizen\",\"Partner\",\"Dependents\",\"Churn\"]\n",
     "        Numeric_variables = [\"tenure\",\"MonthlyCharges\",\"TotalCharges\"]\n",
-    "        One_hot_variables = [\"InternetService\",\"OnlineSecurity\",\"OnlineBackup\",\"DeviceProtection\",\"TechSupport\",\"StreamingTV\",\"StreamingMovies\"]\n",
-    "\n",
+    "        One_hot_variables = [\"PhoneService\",\"MultipleLines\", \"InternetService\",\"OnlineSecurity\",\"OnlineBackup\",\n",
+    "                            \"DeviceProtection\",\"TechSupport\",\"StreamingTV\",\"StreamingMovies\",\"Contract\",\"PaperlessBilling\",\n",
+    "                            \"PaymentMethod\"]\n",
     "\n",
     "        #------------Complete data transformation-----------------------------------------------------------\n",
     "        preprocessor = ColumnTransformer(transformers=[\n",
